@@ -22,6 +22,7 @@ class ANIZIPAPI:
 
     @staticmethod
     def parse_episode_view(res, mal_id, season, poster, fanart, clearart, clearlogo, eps_watched, update_time, tvshowtitle, dub_data, filler_data, episodes=None):
+        kodi_meta = pickle.loads(database.get_show(mal_id)['kodi_meta'])
         episode = int(res['episode'])
         url = f"{mal_id}/{episode}"
         title = res['title']['en']
@@ -38,7 +39,8 @@ class ANIZIPAPI:
             'season': season,
             'episode': episode,
             'tvshowtitle': tvshowtitle,
-            'mediatype': 'episode'
+            'mediatype': 'episode',
+            'genre': kodi_meta.get('genre'),
         }
 
         if eps_watched and int(eps_watched) >= episode:
