@@ -46,6 +46,7 @@ class KitsuAPI:
 
     @staticmethod
     def parse_episode_view(res, mal_id, season, poster, fanart, clearart, clearlogo, eps_watched, update_time, tvshowtitle, dub_data, filler_data, episodes=None):
+        kodi_meta = pickle.loads(database.get_show(mal_id)['kodi_meta'])
         episode = res['attributes']['number']
         url = f"{mal_id}/{episode}"
         title = res['attributes'].get('canonicalTitle', f'Episode {episode}')
@@ -60,7 +61,8 @@ class KitsuAPI:
             'episode': episode,
             'plot': res['attributes'].get('synopsis', 'No plot available'),
             'tvshowtitle': tvshowtitle,
-            'mediatype': 'episode'
+            'mediatype': 'episode',
+            'genre': kodi_meta.get('genre'),
         }
 
         if eps_watched and int(eps_watched) >= episode:
