@@ -18,6 +18,7 @@ class SIMKLAPI:
         self.imagePath = "https://wsrv.nl/?url=https://simkl.in/episodes/%s_w.webp"
 
     def parse_episode_view(self, res, mal_id, season, poster, fanart, clearart, clearlogo, eps_watched, update_time, tvshowtitle, dub_data, filler_data, episodes=None):
+        kodi_meta = pickle.loads(database.get_show(mal_id)['kodi_meta'])
         episode = int(res['episode'])
         url = f"{mal_id}/{episode}"
         title = res.get('title')
@@ -34,7 +35,8 @@ class SIMKLAPI:
             'season': season,
             'episode': episode,
             'tvshowtitle': tvshowtitle,
-            'mediatype': 'episode'
+            'mediatype': 'episode',
+            'genre': kodi_meta.get('genre'),
         }
 
         if eps_watched and int(eps_watched) >= episode:
